# mvp

./: .gitignore  .gitmodules  address.py  caret.py  config.py  createdb.py  dataentry.py  dataentry.ui  dbggraph.py  dbggraph.ui  dbglayout.py  dbgsentences.py  dbgviewdb.py  debug-sentences.ui  debug-view-database.ui  edit-session.ui  example.txt  flashcard.py  flashcard.ui  graphlayout.py  jump-to.ui  key.py  mvp  mvp.py  screen.py  sdb.ini  sentence.py  session.py  simplelayout.py  speedtype.py  speedtype.ui
bridge/: __init__.py  libmvpcore.py  session.py  speedtype.py  verse.py
model/: __init__.py  verse.py
mvpcocoa/mvpcocoa/: AddSessionController.swift  AppDelegate.swift  DownloadVersesController.swift  Error.swift  GraphLayout.swift  Info.plist  Sentence.swift  Session.swift  SessionColViewItem.swift  SessionColViewItem.xib  SessionController.swift  SpeedTypeController.swift  SpeedTypeState.swift  SpeedTypeView.swift  ToolsMenu.swift  Verse.swift  ViewController.swift  (+3 more)
mvpcocoa/mvpcocoa.xcodeproj/: project.pbxproj
mvpcore/: Cargo.toml
mvpcore/src/: book.rs  capi.rs  level.rs  lib.rs  location.rs  range.rs  session.rs  strategy.rs  verse.rs
mvpcore/src/layout/: graph.rs
mvpcore/src/model/: character.rs  compat.rs  mod.rs  word.rs
mvpcore/src/model/speedtype/: compat.rs  mod.rs
mvpcore/src/model/speedtype/strong/: character.rs  level.rs  mod.rs  session.rs  word.rs
mvpcore/src/model/strong/: book.rs  level.rs  location.rs  mod.rs  range.rs  sentence.rs  session.rs  strategy.rs
mvpcore/src/scraper/: mod.rs
mvpcore/src/speedtype/: state.rs
(+3 files in other folders)
