[package]
authors = ["Hee Suk Shin <heesuk@gmail.com>"]
name = "mvpcore"
version = "0.1.0"

[dependencies]
dirs = "1.*"
libc = "0.*"
petgraph = "0.4.*"
rand = "0.*"
sdb = { path = "../sdb/" }
serde = "1.*"
serde_derive = "1.*"
serde_json = "1.*"
sqlite3 = "0.*"

[lib]
crate-type = ["cdylib", "staticlib"]
