[package]
authors = ["Hee Suk Shin <heesuk@gmail.com>"]
name = "mvpcore"
version = "0.1.0"

[dependencies]
dirs = "1.*"
libc = "0.*"
petgraph = "0.4.*"
rand = "0.*"
regex = "1.*"
reqwest = "0.9.2"
serde = "1.*"
serde_derive = "1.*"
serde_json = "1.*"

[dependencies.sdb]
optional = true
path = "../sdb/"

[dependencies.sqlite3]
optional = true
version = "0.24.0"

[features]
default = ["cache_uses_sdb"]
cache_uses_sdb = ["sdb"]
cache_uses_sqlite = ["sqlite3"]

[lib]
crate-type = [
    "cdylib",
    "staticlib",
]
